syntax = "proto3";

package greet;

option go_package = "github.com/Lazaro-Barros/gRPC/greet/proto";

message GreetRequest{
    string first_name=1;
}
message GreetResponse {
    string result_message=1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
}

